--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
-* @softinio
+* @zio/zio-schema
 .github/workflows/ @softinio @mijicd
 build.sbt @softinio @mijicd
 project/BuildHelper.scala @softinio @mijicd
