--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,22 @@ on:
       - published
 
 jobs:
+  lint:
+    runs-on: ubuntu-20.04
+    strategy:
+      fail-fast: false
+    steps:
+      - name: Checkout current branch
+        uses: actions/checkout@v2.3.4
+        with:
+          fetch-depth: 0
+      - name: Setup Scala and Java
+        uses: olafurpg/setup-scala@v10
+      - name: Cache scala dependencies
+        uses: coursier/cache-action@v5
+      - name: Lint code
+        run: sbt fmtCheck fixCheck
+
   build:
     runs-on: ubuntu-20.04
     strategy:
@@ -24,8 +40,6 @@ jobs:
         java-version: ${{ matrix.java }}
     - name: Cache scala dependencies
       uses: coursier/cache-action@v5
-    - name: Lint code
-      run: sbt check
     - name: Run tests
       run: sbt ++${{ matrix.scala }}! test
 
