--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
 
   publish:
     runs-on: ubuntu-20.04
-    needs: [build]
+    needs: [build,lint]
     if: github.event_name != 'pull_request'
     steps:
       - uses: actions/checkout@v2.3.4
