--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-20.04
+    timeout-minutes: 30
     strategy:
       fail-fast: false
     steps:
@@ -27,6 +28,7 @@ jobs:
 
   build:
     runs-on: ubuntu-20.04
+    timeout-minutes: 30
     strategy:
       fail-fast: false
       matrix:
@@ -44,6 +46,7 @@ jobs:
 
   publish:
     runs-on: ubuntu-20.04
+    timeout-minutes: 30
     needs: [build,lint]
     if: github.event_name != 'pull_request'
     steps:
