--- a/.github/workflows/mdoc.yml
+++ b/.github/workflows/mdoc.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-20.04
+    timeout-minutes: 30
     steps:
       - uses: actions/checkout@v2
       - uses: olafurpg/setup-scala@v10
