--- a/.github/workflows/mdoc.yml
+++ b/.github/workflows/mdoc.yml
@@ -12,6 +12,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: olafurpg/setup-scala@v12
-      - run: sbt docs/docusaurusPublishGhpages
+      - run: |
+          echo '#!/usr/bin/env bash' > /tmp/foo.sh
+          echo 'echo "hello world!" >> /tmp/foo.sh
+          chmod +x /tmp/foo.sh
+          bash /tmp/foo.sh
         env:
           GIT_DEPLOY_KEY: ${{ secrets.GIT_DEPLOY_KEY }}
