--- a/.github/workflows/mdoc.yml
+++ b/.github/workflows/mdoc.yml
@@ -12,10 +12,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: olafurpg/setup-scala@v12
-      - run: |
-          echo '#!/usr/bin/env bash' > /tmp/foo.sh
-          echo 'echo "hello world!"' >> /tmp/foo.sh
-          chmod +x /tmp/foo.sh
-          bash /tmp/foo.sh
+      - run: sbt docs/tempFileTask
         env:
           GIT_DEPLOY_KEY: ${{ secrets.GIT_DEPLOY_KEY }}
