--- a/.github/workflows/mdoc.yml
+++ b/.github/workflows/mdoc.yml
@@ -11,7 +11,8 @@ jobs:
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v2
-      - uses: olafurpg/setup-scala@v12
-      - run: sbt docs/tempFileTask
+      - uses: olafurpg/setup-scala@v13
+      - uses: olafurpg/setup-gpg@v3
+      - run: sbt docs/docusaurusPublishGhpages
         env:
           GIT_DEPLOY_KEY: ${{ secrets.GIT_DEPLOY_KEY }}
