--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
       fail-fast: false
       matrix:
         java: ['adopt@1.8', 'adopt@1.11']
-        scala: ['2.12.12', '2.13.3']
+        scala: ['2.12.12', '2.13.3', '3.1.0']
     steps:
     - uses: actions/checkout@v2.3.4
     - uses: olafurpg/setup-scala@v13
