--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
       fail-fast: false
       matrix:
         java: ['adopt@1.8', 'adopt@1.11']
-        scala: ['2.12.15', '2.13.6']
+        scala: ['2.12.15', '2.13.8', '3.1.2']
     steps:
     - uses: actions/checkout@v3.0.0
     - uses: olafurpg/setup-scala@v13
