--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,4 @@
-version = "2.0.1"
+version = "3.5.3"
 
 align = most
 assumeStandardLibraryStripMargin = true
@@ -34,4 +34,61 @@ rewrite.rules = [
 
 optIn {
   annotationNewlines = true
+}
+runner.dialect = scala213
+fileOverride {
+  "glob:**/zio-schema/shared/src/test/scala/**" {
+     runner.dialect = scala213source3
+  }
+  "glob:**/zio-schema-optics/shared/src/test/scala/**" {
+     runner.dialect = scala213source3
+  }
+  "glob:**/zio-schema-derivation/shared/src/main/scala-2/**" {
+     runner.dialect = scala213source3
+  }
+  "glob:**/tests/shared/src/test/scala-2/**" {
+     runner.dialect = scala213source3
+  }
+  "glob:**/zio-schema-zio-test/shared/src/test/scala/**" {
+     runner.dialect = scala213source3
+  }
+  "glob:**/zio-schema-json/shared/src/test/scala-2/**" {
+     runner.dialect = scala213source3
+  }
+  "glob:**/zio-schema/shared/src/main/scala/**" {
+     runner.dialect = scala213source3
+  }
+  "glob:**/zio-schema-thrift/shared/src/test/scala-2/**" {
+     runner.dialect = scala213source3
+  }
+  "glob:**/zio-schema-thrift/shared/src/main/scala/**" {
+     runner.dialect = scala213source3
+  }
+  "glob:**/zio-schema-protobuf/shared/src/test/scala-2/**" {
+     runner.dialect = scala213source3
+  }
+  "glob:**/zio-schema-optics/shared/src/main/scala/**" {
+     runner.dialect = scala213source3
+  }
+  "glob:**/zio-schema-macros/shared/src/main/scala-2/**" {
+     runner.dialect = scala213source3
+  }
+  "glob:**/tests/shared/src/test/scala/**" {
+     runner.dialect = scala213source3
+  }
+  "glob:**/zio-schema-derivation/shared/src/test/scala-2/**" {
+     runner.dialect = scala213source3
+  }
+  "glob:**/zio-schema-examples/shared/src/main/scala/**" {
+     runner.dialect = scala213source3
+  }
+  "glob:**/zio-schema-zio-test/shared/src/main/scala/**" {
+     runner.dialect = scala213source3
+  }
+  "glob:**/zio-schema-protobuf/shared/src/main/scala/**" {
+     runner.dialect = scala213source3
+  }
+  "glob:**/zio-schema-json/shared/src/main/scala/**" {
+     runner.dialect = scala213source3
+  }
 }
