--- a/.github/workflows/mdoc.yml
+++ b/.github/workflows/mdoc.yml
@@ -11,8 +11,15 @@ jobs:
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
       - uses: olafurpg/setup-scala@v13
       - uses: olafurpg/setup-gpg@v3
-      - run: sbt docs/docusaurusPublishGhpages
+      - run: |
+          sbt docs/mdoc
+          cd zio-schema-docs/target/mdoc
+          npm version patch
+          git push
+          npm publish
         env:
           GIT_DEPLOY_KEY: ${{ secrets.GIT_DEPLOY_KEY }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
