use multiple runs.

--- a/.github/workflows/mdoc.yml
+++ b/.github/workflows/mdoc.yml
@@ -15,12 +15,11 @@ jobs:
       - uses: actions/setup-node@v3
       - uses: olafurpg/setup-scala@v13
       - uses: olafurpg/setup-gpg@v3
-      - run: |
-          sbt docs/mdoc
-          cd zio-schema-docs/target/mdoc
-          npm version patch
-          git push
-          npm publish
+      - run: sbt docs/mdoc
+      - run: cd zio-schema-docs/target/mdoc
+      - run: npm version patch
+      - run: git push
+      - run: npm publish
         env:
           GIT_DEPLOY_KEY: ${{ secrets.GIT_DEPLOY_KEY }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
