--- a/.github/workflows/mdoc.yml
+++ b/.github/workflows/mdoc.yml
@@ -1,7 +1,6 @@
 name: Website
 
 on:
-  pull_request:
   push:
     branches: [main]
     tags: ["*"]
@@ -12,15 +11,22 @@ jobs:
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
       - uses: actions/setup-node@v3
       - uses: olafurpg/setup-scala@v13
       - uses: olafurpg/setup-gpg@v3
       - run: sbt docs/mdoc
-      - run: |
-        cd zio-schema-docs/target/mdoc
-        npm version patch
-        git push
-        npm publish
+      - name: setup git config
+      - run: git config user.name "GitHub Actions Bot"
+      - run: git config user.email "<>"
+      - run: | 
+          cd docs
+          npm version patch
+          git push
+      - run: |    
+          cd ../zio-schema-docs/target/mdoc
+          npm publish
         env:
           GIT_DEPLOY_KEY: ${{ secrets.GIT_DEPLOY_KEY }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
