--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ env:
   NODE_OPTIONS: --max_old_space_size=6144
 
 on:
-  pull_request:
+#  pull_request:
   push:
     branches: ['main']
   release:
