--- a/.github/workflows/mdoc.yml
+++ b/.github/workflows/mdoc.yml
@@ -1,10 +1,9 @@
 name: Website
 
 on:
-  pull_request_target:
   push:
     branches: [main]
-    tags: ["*"]
+    tags: ["docs.*"]
 
 jobs:
   publish:
