npm version from git.

--- a/.github/workflows/mdoc.yml
+++ b/.github/workflows/mdoc.yml
@@ -22,6 +22,7 @@ jobs:
       - run: |
           cd zio-schema-docs/target/mdoc
           npm config set access public
+          npm version from-git
           npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
