--- a/.github/workflows/mdoc.yml
+++ b/.github/workflows/mdoc.yml
@@ -21,8 +21,8 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
       - run: |
           cd zio-schema-docs/target/mdoc
+          npm version $(git describe --abbrev=0 --tags)
           npm config set access public
-          npm version from-git
           npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
