--- a/.github/workflows/mdoc.yml
+++ b/.github/workflows/mdoc.yml
@@ -21,7 +21,7 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
       - run: |
           cd zio-schema-docs/target/mdoc
-          npm version $(git describe --abbrev=0 --tags)
+          npm version $(git describe --tags --always)
           npm config set access public
           npm publish
         env:
