--- a/.github/workflows/mdoc.yml
+++ b/.github/workflows/mdoc.yml
@@ -21,6 +21,7 @@ jobs:
         with:
           node-version: '16.x'
           registry-url: 'https://registry.npmjs.org'
+      - run: git tag something
       - run: git tag --list
       - run: |
           cd zio-schema-docs/target/mdoc
