--- a/.github/workflows/mdoc.yml
+++ b/.github/workflows/mdoc.yml
@@ -13,7 +13,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3.1.0
         with:
-          fetch-depth: 10000
+          fetch-depth: 0
+      - name: Get tags
+        run: git fetch --tags origin
+      - run: git tag --list
       - uses: olafurpg/setup-scala@v13
       - uses: olafurpg/setup-gpg@v3
       - run: sbt docs/mdoc
@@ -21,8 +24,6 @@ jobs:
         with:
           node-version: '16.x'
           registry-url: 'https://registry.npmjs.org'
-      - run: git tag something
-      - run: git tag --list
       - run: |
           cd zio-schema-docs/target/mdoc
           npm version $(git describe --abbrev=0 --tags)
