--- a/.github/workflows/mdoc.yml
+++ b/.github/workflows/mdoc.yml
@@ -3,7 +3,7 @@ name: Website
 on:
   push:
     branches: [main]
-    tags: ["*"]
+    tags: ["*", "docs-*"]
 
 jobs:
   publish:
@@ -22,7 +22,7 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
       - run: |
           cd zio-schema-docs/target/mdoc
-          npm version $(git describe --abbrev=0 --tags)
+          npm version $(echo $(git describe --abbrev=0 --tags) | cut -d "-" -f 2)
           npm config set access public
           npm publish
         env:
