--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zio.dev/zio-schema",
-  "version": "0.0.1",
+  "version": "1.1.1-1",
   "description": "ZIO Schema Documentation",
   "main": "index.js",
   "scripts": {
