--- a/.github/workflows/mdoc.yml
+++ b/.github/workflows/mdoc.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v3.1.0
         with:
           fetch-depth: 0
+      - run: git tag --sort=committerdate | tail -1
       - uses: olafurpg/setup-scala@v13
       - uses: olafurpg/setup-gpg@v3
       - run: sbt docs/mdoc
@@ -23,7 +24,7 @@ jobs:
       - name: npm publish  
         run: |
           cd zio-schema-docs/target/mdoc
-          npm version $(python -c 'print("'$(git describe --abbrev=0 --tags)'".replace("docs-", ""))')
+          npm version $(python -c 'print("'$(git tag --sort=committerdate | tail -1)'".replace("docs-", ""))')
           npm config set access public
           npm publish
         env:
