--- a/.github/workflows/mdoc.yml
+++ b/.github/workflows/mdoc.yml
@@ -10,9 +10,26 @@ jobs:
     runs-on: ubuntu-20.04
     timeout-minutes: 30
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v3.1.0
+        with:
+          fetch-depth: 0
+      - run: git tag --sort=committerdate | tail -1
       - uses: olafurpg/setup-scala@v13
-      - uses: olafurpg/setup-gpg@v3
-      - run: sbt docs/docusaurusPublishGhpages
+      - run: sbt docs/mdoc
+      - name: Build website
+        run: | 
+          cd website
+          npm install
+          npm run build
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '16.x'
+          registry-url: 'https://registry.npmjs.org'
+      - name: npm publish  
+        run: |
+          cd zio-schema-docs/target/mdoc
+          npm version $(python -c 'print("'$(git tag --sort=committerdate | tail -1)'".replace("docs-", ""))')
+          npm config set access public
+          npm publish
         env:
-          GIT_DEPLOY_KEY: ${{ secrets.GIT_DEPLOY_KEY }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
