--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,8 @@ jobs:
         scala: ['2.12.17', '2.13.8', '3.1.1']
     steps:
     - uses: actions/checkout@v3.0.0
+      with:
+        fetch-depth: 0
     - uses: olafurpg/setup-scala@v13
       with:
         java-version: ${{ matrix.java }}
