--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: olafurpg/setup-scala@v13
       - name: Compile zio-sbt
         run: |
-          git clone https://github.com/khajavi/zio-sbt.git
+          git clone https://github.com/zio/zio-sbt.git
           cd zio-sbt
           sbt zioSbtWebsite/publishLocal
       - name: Compile Project's Documentation
