--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -6,7 +6,7 @@ name: Documentation
 
 on:
   release:
-    types: [created]
+    types: [ published ]
   workflow_dispatch:
     branches: [ main ]
 
