--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,13 +21,15 @@ jobs:
       fail-fast: false
     steps:
       - name: Checkout current branch
-        uses: actions/checkout@v3.0.0
+        uses: actions/checkout@v3.3.0
+      - name: Setup Java
+        uses: actions/setup-java@v3.10.0
         with:
-          fetch-depth: 0
-      - name: Setup Scala and Java
-        uses: olafurpg/setup-scala@v13
-      - name: Cache scala dependencies
-        uses: coursier/cache-action@v6
+          distribution: temurin
+          java-version: 17
+          cache: 'sbt'
+      - name: Install libuv
+        run: sudo apt-get update && sudo apt-get install -y libuv1-dev
       - name: Lint code
         run: sbt fmtCheck fixCheck
 
@@ -37,19 +39,21 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: ['adopt@1.8', 'adopt@1.11']
-        scala: ['2.12.17', '2.13.8', '3.2.1']
+        java: ['8', '17']
+        scala: ['2.12.*', '2.13.*', '3.2.*']
     steps:
-    - uses: actions/checkout@v3.0.0
+    - name: Checkout current branch
+      uses: actions/checkout@v3.3.0
+    - name: Setup Java
+      uses: actions/setup-java@v3.10.0
       with:
-        fetch-depth: 0
-    - uses: olafurpg/setup-scala@v13
-      with:
+        distribution: temurin
         java-version: ${{ matrix.java }}
-    - name: Cache scala dependencies
-      uses: coursier/cache-action@v6
+        cache: 'sbt'
+    - name: Install libuv
+      run: sudo apt-get update && sudo apt-get install -y libuv1-dev
     - name: Run tests
-      run: sbt ++${{ matrix.scala }}! test
+      run: sbt ++${{ matrix.scala }} test
 
   publish:
     runs-on: ubuntu-20.04
@@ -57,10 +61,16 @@ jobs:
     needs: [build,lint]
     if: github.event_name != 'pull_request'
     steps:
-      - uses: actions/checkout@v3.0.0
+      - name: Checkout current branch
+        uses: actions/checkout@v3.3.0
+      - name: Setup Java
+        uses: actions/setup-java@v3.10.0
         with:
-          fetch-depth: 0
-      - uses: olafurpg/setup-scala@v13
+          distribution: temurin
+          java-version: 8
+          cache: 'sbt'
+      - name: Install libuv
+        run: sudo apt-get update && sudo apt-get install -y libuv1-dev
       - run: sbt ci-release
         env:
           PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
