--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: ['adopt@1.8', 'adopt@1.11']
+        java: ['11', '17']
         scala: ['2.12.18', '2.13.12', '3.3.1']
         platform: ['JVM', 'Native', 'JS']
     steps:
