--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,12 +6,8 @@ env:
   NODE_OPTIONS: --max_old_space_size=6144
 
 on:
-  pull_request:
   push:
-    branches: ['main']
-  release:
-    types:
-      - published
+    branches: ['currency-trial']
 
 jobs:
   lint:
@@ -37,9 +33,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: ['adopt@1.8', 'adopt@1.11']
-        scala: ['2.12.18', '2.13.12', '3.3.1']
-        platform: ['JVM', 'Native', 'JS']
+#        java: ['adopt@1.8', 'adopt@1.11']
+#        scala: ['2.12.18', '2.13.12', '3.3.1']
+#        platform: ['JVM', 'Native', 'JS']
+            java: [ 'adopt@1.8' ]
+            scala: ['2.12.18']
+            platform: ['JVM']
     steps:
     - uses: actions/checkout@v3.0.0
       with:
