--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,8 +6,12 @@ env:
   NODE_OPTIONS: --max_old_space_size=6144
 
 on:
+  pull_request:
   push:
-    branches: ['currency-trial']
+    branches: ['main']
+  release:
+    types:
+      - published
 
 jobs:
   lint:
@@ -33,12 +37,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-#        java: ['adopt@1.8', 'adopt@1.11']
-#        scala: ['2.12.18', '2.13.12', '3.3.1']
-#        platform: ['JVM', 'Native', 'JS']
-            java: [ 'adopt@1.8' ]
-            scala: ['2.12.18']
-            platform: ['JVM']
+        java: ['adopt@1.8', 'adopt@1.11']
+        scala: ['2.12.18', '2.13.12', '3.3.1']
+        platform: ['JVM', 'Native', 'JS']
     steps:
     - uses: actions/checkout@v3.0.0
       with:
