--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -14,7 +14,7 @@ name: Website
 jobs:
   build:
     name: Build and Test
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     if: ${{ github.event_name == 'pull_request' }}
     steps:
     - name: Git Checkout
@@ -30,7 +30,7 @@ jobs:
       run: sbt docs/clean; sbt  docs/buildWebsite
   publish-docs:
     name: Publish Docs
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     if: ${{ ((github.event_name == 'release') && (github.event.action == 'published')) || (github.event_name == 'workflow_dispatch') }}
     steps:
     - name: Git Checkout
@@ -51,7 +51,7 @@ jobs:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
   generate-readme:
     name: Generate README
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     if: ${{ (github.event_name == 'push') || ((github.event_name == 'release') && (github.event.action == 'published')) }}
     steps:
     - name: Git Checkout
