--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,9 +58,25 @@ jobs:
     - name: Run tests
       run: sbt ++${{ matrix.scala }}! test${{ matrix.platform }}
 
+  mima_check:
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+    steps:
+      - name: Checkout current branch
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 300
+      - name: Fetch tags
+        run: git fetch --depth=300 origin +refs/tags/*:refs/tags/*
+      - uses: coursier/setup-action@v1
+        with:
+          jvm: temurin:21
+          apps: sbt
+      - run: sbt +mimaReportBinaryIssues
+
   ci:
     runs-on: ubuntu-latest
-    needs: [build,lint]
+    needs: [build,lint,mima_check]
     steps:
       - run: echo "All checks passed"
 
