Add missing base branch for the Create PR job

--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -82,4 +82,5 @@ jobs:
         branch: zio-sbt-website/update-readme
         commit-message: Update README.md
         delete-branch: true
+        base: main
         title: Update README.md
