--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ env:
 on:
   pull_request:
   push:
-    branches: ['main', 'feature/schema-thrift-v2']
+    branches: ['main']
   release:
     types:
       - published
